# task-api

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: a6e687837dd9_create_tasks_table.py  f980a54000a0_change_task_description_to_text.py
app/: main.py
app/api/routers/: health.py  task.py  tasks.py
app/application/: unit_of_work.py
app/application/dtos/: task_dto.py
app/application/mappers/: task_mapper.py
app/application/ports/: task_repository.py
app/application/services/: task_service.py
app/core/config/: settings.py
app/domain/: errors.py
app/domain/entities/: task.py
app/domain/enums/: task_status.py
app/infrastructure/: dependencies.py
app/infrastructure/db/: bootstrap.py  session_factory.py  sqlalchemy_unit_of_work.py
app/infrastructure/repositories/: in_memory_task_repository.py  task_repository.py
app/modules/tasks/api/: dependencies.py  task_router.py  (+2 more)
app/repositories/: task_repository.py
app/schemas/: task.py
app/services/: task_service.py
docs/: system-design.md
scripts/: init_db.py
scripts/db/: 001_create_roles.sql  002_create_database.sql  003_grants.sql  README.md  bootstrap_dev.sh
tests/: conftest.py
tests/factories/: task.py
tests/integration/: conftest.py  test_health.py
tests/integration/tasks/: test_task_create.py  test_task_read.py  test_task_update.py  test_task_validation.py
tests/unit/mappers/: test_task_mapper.py
tests/unit/repositories/: test_task_repository.py
tests/unit/schemas/: test_task_schema.py
tests/unit/services/: test_task_service.py
(+49 files in other folders)
