[project]
name = "task-api"
version = "0.1.0"
description = "Simple task management API built with FastAPI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
dev = [
"pytest>=9.0.2",
"httpx>=0.28.1"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra -q"
